k8s/05-postgres-service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: opswatch
  labels:
    app: postgres
    app.kubernetes.io/name: opswatch
    app.kubernetes.io/component: database
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
