k8s/12-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opswatch-ingress
  namespace: opswatch
  labels:
    app.kubernetes.io/name: opswatch
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    - host: opswatch.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-api
                port:
                  number: 3001
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: backend-api
                port:
                  number: 3001
          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: backend-api
                port:
                  number: 3001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
